Add parallax to hero image

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,12 @@ $portfolio-theme: mat-light-theme($portfolio-primary, $portfolio-accent, $portfo
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.parallax {
+    background-image: url("assets/hero.jpg");
+    min-height: 25rem; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
