--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,1 +1,2 @@
-<h1>Hello, I'm Scott 👋🏻</h1>
+<img src="{{user.avatar_url}}" alt="GitHub avatar" />
+<h1 class="text-center">Hello, I'm Scott 👋🏻</h1>
