Change hero component to menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-hero></app-hero>
+<app-menu></app-menu>
+<br>
+<br>
+<div class="container">
+    <div class="row">
+        <div class="text-center">
+            <blockquote id="blurb">Full-Stack Developer based in Texas, experienced in mobile, web, and enterprise software development.</blockquote>
+        </div>
+    </div>
+</div>
