--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -8,7 +8,7 @@ img {
     border-radius: 50%;
 }
 
-.hero {
+.menu {
     background-color: #006494;
 
     p, h1, h2, h3, h4, h5, h6 {
@@ -36,6 +36,15 @@ hr {
     }
 }
 
-#blurb {
-    line-height: 2rem;
+@media (min-width: 768px) and (max-width: 992px) {
+    .col-md-3 {
+        margin-left: 2rem;
+    }
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1200px) {
+    .col-md-3 {
+        margin-left: 1rem;
+    }
 }
